# dotfiles

./: .coverage.runnervmg1sw1.3396.XNtEQhwx  .cruft.json  .editorconfig  .envrc  .gitattributes  .gitignore  .gitmodules  .mdformat.toml  .pre-commit-config.yaml  .secrets.baseline  0git_hg_package.stow.sh  0init.stow.sh  1make_dirs.sh  2root.clamav.sh  2root.msmtp.sh  2root.nftables.sh  2root.ollama.sh  2root.raid_mdadm_scrubbing.sh  2root.security.sh  2root.smartd.sh  2root.sshd.sh  2root.systemd.sh  3syncthing.client.sh  4root.sshd.sh  4root.systemd.sh  AGENTS.md  CHANGELOG.md  Changelog.md  LICENSE  Makefile  README.md  TODO.md  TODO.org  agents.stow.sh  ai-containers.stow.sh  alacritty.stow.sh  audio.sh  automount.stow.sh  broot.stow.sh  direnv.stow.sh  (+40 more)
.github/: dependabot.yml
.github/agents/: test.agent.md
.github/workflows/: ci.yml  cruft-update.yml  lockfile-update.yml  release.yml  update-emacs.yml  upgrade-emacs.yml
0util/: post-commit
2root.clamav/etc/clamav/: clamd.conf  virus-event.bash
2root.clamav/etc/fangfrisch/: fangfrisch.conf
2root.keyd/etc/keyd/: default.conf
2root.msmtp/etc/: msmtp.aliases  msmtprc
2root.nftables/etc/: nftables.conf
2root.security/etc/fail2ban/: jail.local
2root.security/etc/sysctl.d/: 99-sysctl.conf
2root.smartd/etc/: smartd.conf
2target=root/4script/: vigolana_rsync
2target=root/4script/dan/: 1anacron-dan
3target=home/: mr.stow.sh  readme
3target=home/mr/dan/: .mrconfig  .mrconfig-progs  .mrtrust
3target=home/mr/dati/: .mrconfig
3target=home/mr/examples/: .mrconfig
4root/etc/: _hosts  locale.conf  pacman.conf  rsnapshot.conf  smartd.conf
4root/etc/modules-load.d/: virtualbox.conf
4root/etc/netctl/: wlp4s0-AndroidAP  wlp4s0-AndroidAPtab  wlp4s0-daufinat  wlp4s0-eduroam
4root/etc/pulse/: default.pa
4root/etc/udevil/: udevil.conf
4root/etc/wpa_supplicant/: wpa_supplicant-wlan0.conf
9-not-used/old-4script/: cksum_Archive_weekly  raid_scrubbling_weekly
9-not-used/old-4script/dan/: 0anacron-dan
9-not-used/unison-hunza/.unison/: default.prf
R/: .Rprofile
abcde/: .abcde.conf
agents/.claude/: setup-mcp-servers.sh
agents/.claude/commands/: docstring.md  fitreview.md  typecheck.md
agents/.codex/: instructions.md
agents/.copilot/: AGENTS.md
agents/.hermes/: .env
ai-containers/: README.md
ai-containers/ai-containers/khoj/: podman-compose.yml
ai-containers/ai-containers/litellm/: config.yaml  podman-compose.yml
ai-containers/ai-containers/searxng/: podman-compose.yml  settings.yml
ai-containers/ai-containers/vane/: podman-compose.yml
alacritty/.config/: alacritty.toml
alacritty/.config/alacritty/: alacritty-base.toml  alacritty.toml  alacritty_light.toml
anacron/.anacron/: anacrontab
anacron/.anacron/daily/: borg_daily  cleaned_syncronizations  recollindex
autokey/.config/autokey/: autokey.json  autokey.json~
bash/: .bash_profile  .bashrc  .bashrc_custom_prompt.bash  .functions  .inputrc  .profile
bash-sterzing/: .bashrc.sterzing
bash/.bashrc.d/: aliases.sh  functions.sh  fzf.sh  git_annex.sh  ps_mem.sh  venv.bash  venv_completion.sh
bash/.config/environment.d/: 40-emacs.conf
broot/.bashrc.d/: broot.sh
direnv/.config/direnv/: direnvrc
docs/: conf.py  emacs.md  index.md  installation.md  scripts.md  submodules.md  usage.md
emacs/: .emacs
emacs/.config/environment.d/: 40-emacs.conf
emacs/.emacs.d/: early-init.el  init.el  new.el
emacs/.emacs.d/mk/: mk-text.el
emacs/.emacs.d/my-config/: ai.el  my-ai.el  my-email.el  my-modes.el  my-ob.el  my-org-cal.el  my-org.el  my-prose.el  my-spell.el
emacs/.emacs.d/prompts/: grant-synthesis.org
emacs/.emacs.d/test/: test.el
emacs/contrib/: org-notmuch.el
foot/.config/foot/: foot.ini
fzf/.bashrc.d/: fzf.sh
gh/.config/gh/: hosts.yml
git_hg/: .gitconfig  .hgrc
goldendict/.config/environment.d/: 41-goldendict.conf
goldendict/.goldendict/: config
gpg_ssh/.gnupg/: gpg-agent.conf
gpg_ssh/.ssh/: config
gtk/: .gtkrc-2.0  .gtkrc.mine
gtk/.config/gtk-3.0/: bookmarks  settings.ini
gvim/.vim/: UltiSnips  filetype.vim  vimrc
gvim/.vim/plugin/: wdiff.vim
handlr/.config/: mimeapps.list
handlr/.config/handlr/: handlr.toml
hatch/.config/hatch/: config.toml
htop/.config/htop/: htoprc
i3misc/: .i3status.conf
jupyter/.jupyter/: jupyter_notebook_config.py
kodi-tresero2/: guisettings.xml
mbsync/: .mbsyncrc
mimeapps/.config/: mimeapps.list
misc/: .Xmodmap  .Xresources  .aliases  .inputrc  .netrc  .pam_environment  .xinitrc
misc/.config/: aurvote  locale.conf  mimeapps.list  user-dirs.dirs
mr/: .mrconfig  .mrconfig-progs  .mrtrust
mr/dan/: .mrconfig  .mrconfig-progs  .mrtrust
mr/dati/: .mrconfig
mr/examples/: .mrconfig
mr/workspace/: .mrconfig
msmtp/: .msmtp.aliases  .msmtprc
mutt/: .mailcap  .mbsyncrc  .msmtp.aliases  .msmtprc  .notmuch-config  .offlineimaprc
mutt/.mutt/: bindings  cnr  cnr.signature  colors  gmail  gmail.signature  mailcap  muttrc  sidebar
notmuch-afew/: .notmuch-config
pandoc/.pandoc/: Header.ps  a.md  doc0.docx  doc0.odt  doc4.docx  doc4.odt  draft.sty  draft4.sty  pandoc-letter  paper-draft.docx  paper.odt  ref1.docx  template-letter.latex  template.tex
pdf/.config/: gscan2pdfrc  paperwork2.conf
proselint_vale/: .vale.ini
rclone/: .rclone.conf  .rclone.conf.orig
recoll/.recoll/: mimeconf  mimeview  recoll.conf
searxng_perplexica/: README.md  gptel-mcp-scientific.el
searxng_perplexica/pr-drafts/: README.md
spacemacs/: .pam_environment  .twittering-mode.gpg  spacemacs.list.org  spacemacs.list.txt
spacemacs/.spacemacs.d/: .#init.el  .spacemacs.env  bookmarks  diction.el  init.el  org-gcal  spacemacs.env
spacemacs_elfeed-server/.spacemacs.d/: init.el
ssh/.ssh/: config
starship/.config/: starship.toml
syncthing/Sync/: .stignore
tests/: __init__.py  test_mm_organize.py  test_pdf_mcp.py  test_update_changelog.py
textlint/: .textlintrc
tmux/: .tmux.conf
vanilla-emacs/.emacs.d/: abbrev_defs  early-init.el  init.el
vim-janus/: .vimrc
vim/.vim/: bundle  keystrokes.vim  spell  thesaurus  vimrc
yazi/.bashrc.d/: y.sh
(+228 files in other folders)
