[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{ name = "daniele arosio", email = "daniele.arosio@cnr.it" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
description = 'My dotfiles including emacs, vim, etc.'
keywords = []
license = "BSD-3-Clause"
name = "dotfiles"
readme = "README.md"
requires-python = ">=3.11"
version = "3.19.0"

[project.optional-dependencies]
dev = [
  "commitizen == 4.7.2",
  "mdformat-gfm==0.4.1",
  "mdformat==0.7.22",
  "pre-commit == 4.2.0",
  "pylsp-mypy == 0.7.0",
  "ruff == 0.11.11",
  "ruff-lsp==0.0.62",
]

[project.urls]
Documentation = "https://github.com/unknown/dotfiles#readme"
Issues = "https://github.com/unknown/dotfiles/issues"
Source = "https://github.com/unknown/dotfiles"

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
line-length = 88
skip-string-normalization = false

[tool.commitizen]
name = "cz_customize"
tag_format = "$version"
version = "3.19.0"
version_files = [
  "pyproject.toml:version",
  "README.md:Version",
  "emacs/.emacs.d/init.el:Version",
]

[tool.commitizen.customize]
bump_map = { "^.+!:" = "MAJOR", "BREAKING CHANGE" = "MAJOR", "feat" = "MINOR", "fix" = "PATCH", "perf" = "PATCH", "refactor" = "PATCH" }
bump_pattern = "^(BREAKING CHANGE|feat|fix|perf|refactor)"
change_type_map = { "feat" = "Feat", "fix" = "Fix", "docs" = "Docs", "build" = "Build", "style" = "Style", "refactor" = "Refactor", "perf" = "Perf", "test" = "Test", "ci" = "CI/CD" }
change_type_order = [
  "BREAKING CHANGE",
  "Feat",
  "Fix",
  "Docs",
  "Style",
  "Perf",
  "Test",
  "Build",
  "CI/CD",
]
changelog_pattern = "^(feat|fix|docs|style|refactor|perf|test|build|ci)?(\\(.*\\))?(!)?"
commit_parser = "^(?P<change_type>feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert)(?:\\((?P<scope>[^()\r\n]*)\\)|\\()?(?P<breaking>!)?:\\s(?P<message>.*)?"
example = """fix(parser): correct minor typos in code\n
see the issue for details on the typos fixed\n
closes issue #12
"""
info_path = "cz_customize_info.txt"
message_template = "{{change_type}}:{% if show_message %} {{message}}{% endif %}"
schema = """
<type>(<scope>): <subject>
<BLANK LINE>
<body>
<BLANK LINE>
(BREAKING CHANGE: )<footer>
"""
schema_pattern = "^(feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert|bump)(?:\\(([^()\r\n]*)\\)|\\()?(!)?:\\s(.*)?"

[[tool.commitizen.customize.questions]]
choices = [
  { value = "feat", name = "feat: A new feature. Correlates with MINOR in SemVer" },
  { value = "fix", name = "fix: A bug fix. Correlates with PATCH in SemVer" },
  { value = "perf", name = "perf: A code change that improves performance. Correlates with PATCH in SemVer" },
  { value = "docs", name = "docs: Documentation only changes" },
  { value = "style", name = "style: Changes that do not affect the meaning of the code (white-space, formatting, missing semi-colons, etc)" },
  { value = "refactor", name = "refactor: A code change that neither fixes a bug nor adds a feature" },
  { value = "test", name = "test: Adding missing or correcting existing tests" },
  { value = "build", name = "build: Changes that update the build system, development tools or external dependencies" },
  { value = "ci", name = "ci: Changes to our CI configuration files and scripts (example scopes: GitLabCI)" },
  { value = "revert", name = "revert: Reverting to previous commit(s)." },
]
message = "Select the type of change you are committing"
name = "change_type"
type = "list"

[[tool.commitizen.customize.questions]]
message = "Body."
name = "message"
type = "input"

[[tool.commitizen.customize.questions]]
message = "Do you want to add body message in commit?"
name = "show_message"
type = "confirm"

[tool.hatch.build.targets.wheel]
packages = ["emacs"]

[tool.hatch.envs.default]
features = ["dev"]
installer = "uv"
path = ".venv"


[tool.hatch.envs.default.scripts]
bump = [
  "cz bump -ch {args}", # e.g. "--increment PATCH"
]
ch = "cz ch --incremental --unreleased-version HEAD"
clean = "rm -rf ./build .coverage ./__pycache__ ./.mypy_cache ./.pytest_cache ./docs/_build ./tests/__pycache__ ./dist ./src/nima/__pycache__"
init = [
  "pre-commit --version",
  "pre-commit install",
  "pre-commit install --hook-type commit-msg --hook-type pre-push",
]
lint = [
  "pre-commit --version",
  "pre-commit run --all-files --hook-stage=manual --show-diff-on-failure {args}",
]

[tool.mdformat]
number = true # Prevent renumbering ordered lists
plugins = [
  "gfm", # Enable GitHub Flavored Markdown extensions
]
# Configure line wrapping (e.g., match your Apheleia arg --wrap "keep")
wrap = "keep"

[tool.ruff]
extend-exclude = ["ranger/.config/ranger/commands.py"]
fix = true
unsafe-fixes = true
target-version = "py313"
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = [
  "ANN201",
  "ISC001",
  "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
select = [
  "A", # builtins
  "ANN", # typing annotation
  "ARG", # unused arguments
  "B", # bugbear
  "BLE", # blind-except
  "C",
  "C4", # comprehensions
  "C90", # mccabe
  "D", # pydocstyle
  "DTZ", # dates
  "E", # pycodestyle
  "TRY", # exceptions
  "EM", # exceptions
  "ERA", # eradicate
  "F", # pyflakes
  "FBT", # boolean-trap
  "FLY", # flyntp
  "FURB", # refurbishing and modernizing
  "I", # isort
  "ICN", # import conventions (opinionated)
  "ISC", # implicit-str-concat
  "N", # pep8-naming
  "NPY",
  "AIR", # airflow
  "PERF", # pperformance anti pattern
  "PD", # pandas-vet
  "PGH", # pygrep WAIT
  "PL", # pylint see PLR2004...
  "PT", # pytest-style
  "PTH", # use-pathlib
  "Q", # quotes
  "RET", # Return
  "RSE", # Raise
  "RUF", # Ruff
  "S", # bandit
  "SLF", # private self
  "SLOT", # __slot__
  "SIM", # simplify
  "TID", # tidy-imports
  "TCH", # TYPE_CHECKING
  "TRY", # tryceratops
  # "TD",  # TODOs
  # "FIX",  #
  "UP", # pyupgrade
  "YTT", # 2020
  "W", # pycodestyle
]

isort.combine-as-imports = true
isort.force-single-line = false
isort.known-first-party = ["nima"]
isort.split-on-trailing-comma = true
mccabe.max-complexity = 12

[tool.ruff.lint.pydocstyle]
convention = "numpy"
