[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{ name = "daniele arosio", email = "daniele.arosio@cnr.it" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "html2text>=2025.4.15",
]
description = 'My dotfiles including emacs, vim, etc.'
keywords = []
license = "BSD-3-Clause"
name = "dotfiles"
readme = "README.md"
requires-python = ">=3.11"
version = "3.20.1"

[project.optional-dependencies]
dev = [
  "git-cliff==2.10.1",
  "mdformat==0.7.22",
  "mdformat-gfm==0.4.1",
  "pylsp-mypy==0.7.0",
  "ruff==0.13.1",
  "python-lsp-ruff==2.2.2",
]
lint = [
  "pre-commit==4.3.0",
]
hatch = [
  "hatch==1.14.2",
]

[project.urls]
Documentation = "https://github.com/unknown/dotfiles#readme"
Source = "https://github.com/unknown/dotfiles"
"Bug Tracker" = "https://github.com/darosio/ClopHfit/issues"
Changelog = "https://github.com/darosio/ClopHfit/blob/main/CHANGELOG.md"

# [project.scripts]
# "clop" = "clophfit.__main__:clop"
# "fit-titration" = "clophfit.__main__:fit_titration"
# "note_to_csv" = "clophfit.__main__:note2csv"
# "ppr" = "clophfit.__main__:ppr"

# version_files = [
#   "pyproject.toml:version",
#   "docs/conf.py:release",
#   "README.md:Version"
# ]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
# fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
omit = ["*__init__.py", "types.py"]
source = ["scripts"]

# needed to avoid hatch error
[tool.hatch.build.targets.wheel]
packages = ["emacs"]

[tool.hatch.envs.default]
features = ["dev", "lint"]
installer = "uv"
path = ".venv"

[tool.hatch.envs.default.scripts]
ch = "git cliff --bump --unreleased --prepend CHANGELOG.md"
bump = """
NEXT_VERSION=$(git cliff --bumped-version)
uv version $NEXT_VERSION
uv sync --all-extras
git add .
git commit -m "chore: release $NEXT_VERSION"
git tag $NEXT_VERSION
git push
git push --tags
"""
clean = """
rm -rf **/__pycache__/ \
  .mypy_cache/ .pytest_cache/ .ruff_cache/ \
  build/ dist/ *.egg-info/ \
  docs/_build/ **/.ipynb_checkpoints/ **/.virtual_documents/ \
  **/*.pyc **/*.pyo **/*.pyd **/.coverage.*
"""

[tool.hatch.envs.lint]
type = "virtual"
features = ["lint"]
installer = "uv"

[tool.hatch.envs.lint.scripts]
init = "pre-commit install"
lint = "pre-commit run --all-files --show-diff-on-failure {args}"

[tool.isort]
combine_as_imports = true
force_single_line = false
include_trailing_comma = true
known_first_party = "nima"
line_length = 88 # to match black's default line length
multi_line_output = 3
profile = "black"

[tool.mypy]
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
exclude = "src/clophfit/old"
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_unreachable = true
warn_unused_configs = true

# TODO: check
[tool.pydoclint]
check-class-attributes = false

[tool.pylsp-mypy]
dmypy = false
enabled = true
live_mode = true
strict = true

[tool.ruff]
extend-exclude = ["ranger/.config/ranger/commands.py"]
fix = true
force-exclude = true
unsafe-fixes = true
target-version = "py311"
line-length = 88
# Enable preview mode
preview = false

[tool.ruff.format]
docstring-code-format = true


[tool.ruff.lint]
select = [
  "A", # builtins
  "AIR", # airflow
  "ANN", # typing annotation
  "ARG", # unused arguments
  "ASYNC",
  "B", # bugbear
  "BLE", # blind-except
  "C",
  "C4", # comprehensions
  "C90", # mccabe
  "D", # pydocstyle
  "DOC",
  "DTZ", # dates
  "E", # pycodestyle
  "EM", # exceptions
  "ERA", # eradicate
  "EXE",
  "F", # pyflakes
  "FA", # future annotations
  "FBT", # boolean-trap
  "FLY", # flyntp
  "FURB", # refurbishing and modernizing
  "G", # logging
  "I", # isort
  "ICN", # import conventions (opinionated)
  "INP", # inplict namespace
  "INT", # gettext
  "ISC", # implicit-str-concat
  "LOG", # logging
  "N", # pep8-naming
  "NPY",
  "PD", # pandas-vet
  "PERF", # pperformance anti pattern
  "PGH", # pygrep WAIT
  "PIE",
  "PL", # pylint see PLR2004...
  "PT", # pytest-style
  "PTH", # use-pathlib
  "PYI", # lint typeshed
  "Q", # quotes
  "RET", # Return
  "RSE", # Raise
  "RUF", # Ruff
  "S", # bandit
  "SIM", # simplify
  "SLF", # private self
  "SLOT", # __slot__
  "T10", # debugger
  # "T20", # print
  "TC", # TYPE_CHECKING
  "TCH", # TYPE_CHECKING
  "TID", # tidy-imports
  "TRY", # tryceratops
  "UP", # pyupgrade
  "W", # pycodestyle
  "YTT", # 2020
]
isort.combine-as-imports = true
isort.force-single-line = false
# isort.known-first-party = ["nima"]
isort.split-on-trailing-comma = true
mccabe.max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I002"] # don't need annotations
"src/clophfit/__main__.py" = [
  "ANN001", # params are annotated using click
]
"scripts/*" = ["ANN201", "LOG", "T20"]
"ranger/.local/bin/*" = ["LOG", "T20"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.typos]

[tool.typos.default.extend-words]
arange = "arange"
arosio = "Arosio"
viw = "viw" # unfortunate script name
tilda = "tilda" # drop down terminal in rifle
Ket = "Ket" # supermarKet in emacs init
ba = "ba"

[tool.typos.files]
extend-exclude = [
  "goldendict/*/config",
  "nftables.conf",
  ".mrconfig",
  "bash/.bashrc.d/fzf.sh",
  "emacs/.emacs.d/mk/mk-text.el",
  "gvim/.vim/syntax/ijmacro.vim",
  "**/ranger/rc.conf",
  "**/yazi/plugins",
]
