[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{ name = "daniele arosio", email = "daniele.arosio@cnr.it" }]
classifiers = [
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Unix Shell",
  "Development Status :: 3 - Alpha",
]
dependencies = [
  "html2text>=2025.4.15",
]
description = 'My dotfiles including emacs, vim, etc.'
keywords = []
license = "BSD-3-Clause"
name = "dotfiles"
readme = "README.md"
requires-python = ">=3.13"
version = "3.21.0"

[project.optional-dependencies]
docs = [
  "autodocsumm>=0.2.14",
  "myst-parser>=5.0.0",
  "pydata-sphinx-theme>=0.16.1",
  "pygments>=2.19.2",
  "sphinx-autodoc-typehints>=3.5.2",
  "sphinx-click>=6.2.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx>=8.2.3",
]

[dependency-groups]
dev = [
  "git-cliff>=2.12.0",
  "mdformat>=1.0.0",
  "mdformat-gfm>=1.0.0",
  "pylsp-mypy>=0.7.1",
  "ruff>=0.15.2",
  "python-lsp-ruff>=2.3.0",
  "cruft>=2.16.0",
]
lint = [
  "pre-commit==4.5.1",
]
tests = [
  "click>=8.3.1",
  "coverage[toml]>=7.13.4",
  "pytest-cov>=7.0.0",
  "pytest>=9.0.2",
  "python-dateutil>=2.9.0.post0",
  "types-python-dateutil>=2.9.0",
  "xdoctest>=1.3.0",
]

[project.urls]
Documentation = "https://github.com/darosio/dotfiles#readme"
Source = "https://github.com/darosio/dotfiles"
"Bug Tracker" = "https://github.com/darosio/dotfiles/issues"
Changelog = "https://github.com/darosio/dotfiles/blob/main/CHANGELOG.md"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
# fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
omit = ["*__init__.py", "types.py"]
source = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# needed to avoid hatch error
[tool.hatch.build.targets.wheel]
# packages = ["emacs"]
packages = ["."]
# include = ["/scripts"]

[tool.isort]
combine_as_imports = true
force_single_line = false
include_trailing_comma = true
known_first_party = "src"
line_length = 88 # to match black's default line length
multi_line_output = 3
profile = "black"

[tool.mypy]
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
exclude = ["scripts/update_changelog\\.py"]
mypy_path = "src/.local/bin"
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "numpy", "docopt", "notmuch", "pandas", "seaborn"]
ignore_missing_imports = true

# TODO: check
[tool.pydoclint]
check-class-attributes = false

[tool.pylsp-mypy]
dmypy = false
enabled = true
live_mode = true
strict = true

[tool.ruff]
extend-exclude = ["ranger/.config/ranger/commands.py", "scripts/update_changelog.py", "searxng-mcp.py"]
fix = true
force-exclude = true
line-length = 88
target-version = "py313"
unsafe-fixes = true
# Enable preview mode
preview = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = ["ISC001"]
select = [
  "A", # builtins
  "AIR", # airflow
  "ANN", # typing annotation
  "ARG", # unused arguments
  "ASYNC",
  "B", # bugbear
  "BLE", # blind-except
  "C",
  "C4", # comprehensions
  "C90", # mccabe
  "D", # pydocstyle
  "DOC",
  "DTZ", # dates
  "E", # pycodestyle
  "EM", # exceptions
  "ERA", # eradicate
  "EXE",
  "F", # pyflakes
  "FA", # future annotations
  "FBT", # boolean-trap
  "FLY", # flyntp
  "FURB", # refurbishing and modernizing
  "G", # logging
  "I", # isort
  "ICN", # import conventions (opinionated)
  "INP", # inplict namespace
  "INT", # gettext
  "ISC", # implicit-str-concat
  "LOG", # logging
  "N", # pep8-naming
  "NPY",
  "PD", # pandas-vet
  "PERF", # pperformance anti pattern
  "PGH", # pygrep WAIT
  "PIE",
  "PL", # pylint see PLR2004...
  "PT", # pytest-style
  "PTH", # use-pathlib
  "PYI", # lint typeshed
  "Q", # quotes
  "RET", # Return
  "RSE", # Raise
  "RUF", # Ruff
  "S", # bandit
  "SIM", # simplify
  "SLF", # private self
  "SLOT", # __slot__
  "T10", # debugger
  # "T20", # print
  "TC", # TYPE_CHECKING
  "TCH", # TYPE_CHECKING
  "TID", # tidy-imports
  "TRY", # tryceratops
  "UP", # pyupgrade
  "W", # pycodestyle
  "YTT", # 2020
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["src"]
split-on-trailing-comma = true

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I002"] # don't need annotations
"docs/conf.py" = ["INP001"]
"src/*" = ["ANN201", "DOC201", "DOC501", "LOG", "PLR6301", "S404", "T20"]
"ranger/.local/bin/*" = ["LOG", "T20"]
"yazi/.local/bin/*" = ["DOC201", "DOC501"]
"tests/*" = ["PLC2701", "PLR6301", "S101", "PLR2004", "DTZ001"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.typos]

[tool.typos.default]
extend-ignore-re = [
  "\"id\":\\s*\"[^\"]+\"", # Ignore specific patterns such as "id": "XXXX" in JSON
  "\"metadata\":\\s*\\{[^}]*\\}", # Ignore all metadata fields inside .ipynb cells
]


[tool.typos.default.extend-words]
arange = "arange"
arosio = "Arosio"
viw = "viw" # unfortunate script name
tilda = "tilda" # drop down terminal in rifle
Ket = "Ket" # supermarKet in emacs init
ba = "ba"

[tool.typos.files]
extend-exclude = [
  "goldendict/*/config",
  "nftables.conf",
  ".mrconfig",
  "bash/.bashrc.d/fzf.sh",
  "emacs/.emacs.d/mk/mk-text.el",
  "gvim/.vim/syntax/ijmacro.vim",
  "**/ranger/rc.conf",
  "**/yazi/plugins",
]
